[Qt] Fix the --minimal build after r127327 https://bugs.webkit.org/show_bug.cgi?id=95639

Unreviewed attempt to fix Qt minimal build.

* css/StyleBuilder.cpp:

Canonical link: https://commits.webkit.org/113529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127371 268f45cc-cd09-0410-ab3c-d52691b4dbfc